[package]
name = "gget"
version = "0.1.0"
authors = ["pgold"]
edition = "2018"
license = "Unlicense"
description = "An utility to fetch Gemini documents."
repository = "https://github.com/pgold/gget/"

[dependencies]
anyhow = "1.0.32"
rustls = { version = "0.18.0", features = ["dangerous_configuration"] }
structopt = "0.3.13"
thiserror = "1.0.20"
url = "2.1.0"
webpki = "0.21.3"
webpki-roots = "0.20.0"
